test_suite/tests/ui/float/derive/ord_without_eq.stderr
error: Trait Ord requires Eq.
       Festina lente.
 --> tests/ui/float/derive/ord_without_eq.rs:4:33
  |
4 | #[derive(PartialEq, PartialOrd, Ord)]
  |                                 ^^^
